--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "sonner": "^1.0.3"
+    "sonner": "^1.0.3",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
