--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "socket.io-client": "^4.7.2",
     "sonner": "^1.0.3",
     "zustand": "^4.4.1"
   },
