--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
     "sonner": "^1.0.3",
